<resources>
    <string name="app_name">Patient Doctor Consultation</string>

    <string name="menu_title_home">Home</string>
    <string name="menu_title_profile">Profile</string>
    <string name="menu_title_preferences">Preferences</string>

    <!--Profile Fragment-->
    <string name="label_profile_first_name">First Name</string>
    <string name="label_profile_last_name">Last Name</string>
    <string name="label_profile_gender">Gender</string>
    <string name="label_profile_height">Height (cm)</string>
    <string name="label_profile_weight">Weight (kg)</string>
    <string name="label_profile_age">Date of Birth</string>
    <string name="label_medical_conditions">Medical Conditions</string>
    <string name="profile_hint_gender">Male</string>
    <string name="profile_hint_age">12/07/1999</string>
    <string name="profile_hint_weight">85</string>
    <string name="profile_hint_last_name">Smith</string>
    <string name="profile_hint_first_name">John</string>
    <string name="profile_hint_height">185</string>
    <string name="profile_medical_conditions">Medical Condition 1 \nMedical Condition 2</string>
    <string name="submit">Save</string>
    <string name="home_card_title_data_packet">Data Packets</string>
    <string name="home_card_title_doctors">Doctors</string>
    <string name="home_card_title_patients">Patients</string>
    <string name="home_card_title_nearby">Nearby Medical Facilities</string>
    <string name="add">+</string>
    <string name="hint_title">Title</string>
    <string name="hint_enter_text">Enter text</string>
    <string name="hint_comment">Enter comment</string>
    <string name="title_comments">Comments</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">264592337713075</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb264592337713075</string>
    <string name="hint_heart_rate">Hole index finger over camera and flash (if present) for at least 10 seconds.    The longer you hold your finger, the more accurate the measurement</string>
    <string name="description_suggestion">Enter suggestion description</string>
    <string name="select_location">Select Location</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="email_hint">john.smith@domain.com</string>
    <string name="lable_email">Email</string>
    <string name="hint_location">Location</string>
    <string name="hint_speciality">Speciality</string>
    <string name="description_hint">Description line 1   Description Line 2</string>
    <string name="label_location">Location</string>
    <string name="label_speciality">Speciality</string>
    <string name="label_description">Description</string>
    <string name="edit">Edit</string>
</resources>
