<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="java.lang.Integer"/>
        <import type="com.group4.patientdoctorconsultation.utilities.BindingAdapters"/>
        <import type="android.view.View"/>
        <import type="android.text.InputType"/>

        <variable
                name="profileHandler"
                type="com.group4.patientdoctorconsultation.ui.fragment.ProfileFragment"/>

        <variable
                name="profile"
                type="com.group4.patientdoctorconsultation.data.model.Profile"/>

        <variable
                name="locked"
                type="boolean"/>

        <variable
                name="editable"
                type="boolean"/>

    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:minHeight="600dp"
            style="@style/PrimaryFragment">


        <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/profile_hint_first_name"
                android:text="@={profile.firstName}"
                android:inputType='@{locked ? InputType.TYPE_NULL : InputType.TYPE_CLASS_TEXT}'
                app:layout_constraintEnd_toStartOf="@+id/edit_last_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/profile_hint_last_name"
                android:inputType='@{locked ? InputType.TYPE_NULL : InputType.TYPE_CLASS_TEXT}'
                android:text="@={profile.lastName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/edit_first_name"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/edit_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/profile_hint_age"
                android:inputType='@{locked ? InputType.TYPE_NULL : InputType.TYPE_CLASS_TEXT}'
                android:focusable="false"
                android:text="@={BindingAdapters.getSimpleDateString(profile.dateOfBirth)}"
                app:layout_constraintBottom_toTopOf="@+id/edit_gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"/>

        <EditText
                android:id="@+id/edit_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/profile_hint_gender"
                android:inputType='@{locked ? InputType.TYPE_NULL : InputType.TYPE_CLASS_TEXT}'
                android:text="@={profile.gender}"
                app:layout_constraintBottom_toTopOf="@+id/edit_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_age"/>

        <EditText
                android:id="@+id/edit_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/profile_hint_height"
                android:inputType='@{locked ? InputType.TYPE_NULL : InputType.TYPE_CLASS_TEXT}'
                android:text="@={profile.heightInCentimetres}"
                app:layout_constraintEnd_toStartOf="@+id/edit_weight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"/>

        <EditText
                android:id="@+id/edit_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/profile_hint_weight"
                android:inputType='@{locked ? InputType.TYPE_NULL : InputType.TYPE_CLASS_TEXT}'
                android:text="@={profile.weightInKg}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/edit_height"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"/>

        <EditText
                android:id="@+id/edit_medical_conditions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="80dp"
                android:ems="10"
                android:hint="@string/profile_medical_conditions"
                android:inputType='@{locked ? InputType.TYPE_NULL : InputType.TYPE_TEXT_FLAG_MULTI_LINE}'
                android:text="@={profile.medicalConditions}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_height"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:id="@+id/label_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/label_profile_first_name"
                app:layout_constraintBottom_toTopOf="@+id/edit_first_name"
                app:layout_constraintStart_toStartOf="@+id/edit_first_name"/>

        <TextView
                android:id="@+id/label_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/label_profile_last_name"
                app:layout_constraintBottom_toTopOf="@+id/edit_last_name"
                app:layout_constraintStart_toStartOf="@+id/edit_last_name"/>

        <TextView
                android:id="@+id/label_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/label_profile_age"
                app:layout_constraintBottom_toTopOf="@+id/edit_age"
                app:layout_constraintStart_toStartOf="@+id/edit_age"/>

        <TextView
                android:id="@+id/label_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/label_profile_gender"
                app:layout_constraintBottom_toTopOf="@+id/edit_gender"
                app:layout_constraintStart_toStartOf="@+id/edit_gender"/>

        <TextView
                android:id="@+id/label_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/label_profile_height"
                app:layout_constraintBottom_toTopOf="@+id/edit_height"
                app:layout_constraintStart_toStartOf="@+id/edit_height"/>

        <TextView
                android:id="@+id/label_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/label_profile_weight"
                app:layout_constraintBottom_toTopOf="@+id/edit_weight"
                app:layout_constraintStart_toStartOf="@+id/edit_weight"/>

        <TextView
                android:id="@+id/label_medical_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/label_medical_conditions"
                app:layout_constraintBottom_toTopOf="@+id/edit_medical_conditions"
                app:layout_constraintStart_toStartOf="@+id/edit_medical_conditions"/>

        <Button
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:onClick="@{profileHandler::lockUnlockLayout}"
                android:visibility="@{locked &amp;&amp; editable ? View.VISIBLE : View.INVISIBLE}"
                android:text="@string/edit"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_medical_conditions"/>

        <Button
                android:id="@+id/edit_save"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:onClick="@{profileHandler::submit}"
                android:visibility="@{!locked ? View.VISIBLE : View.INVISIBLE}"
                android:text="@string/submit"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sign_out_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_medical_conditions"/>

        <Button
                android:id="@+id/sign_out_button"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/sign_out"
                android:visibility="@{!locked ? View.VISIBLE : View.INVISIBLE}"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/edit_save"
                app:layout_constraintTop_toBottomOf="@+id/edit_medical_conditions"/>

    </android.support.constraint.ConstraintLayout>

</layout>